--- a/app/src/main/res/layout/act_register.xml
+++ b/app/src/main/res/layout/act_register.xml
@@ -148,7 +148,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="15dp"
                         android:digits="0123456789"
                         android:fontFamily="@font/lato_regular"
                         android:inputType="number"
@@ -159,6 +158,85 @@
                         android:textSize="15sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/lay_soothram"
+                    style="@style/MaterialInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/soothram">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edt_soothram"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                        android:fontFamily="@font/lato_regular"
+                        android:imeOptions="actionDone"
+                        android:inputType="text"
+                        android:maxLength="16"
+                        android:maxLines="1"
+                        android:paddingStart="1dp"
+                        android:paddingEnd="1dp"
+                        android:textColor="@color/theme_dark_grey"
+                        android:textSize="16sp"
+                        tools:targetApi="lollipop" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/lato_regular"
+                        android:text="@string/are_you_vaidhika"
+                        android:textColor="@color/theme_dark_grey"
+                        android:textSize="18sp"
+                        tools:ignore="UnusedAttribute" />
+
+
+                    <RadioGroup
+                        android:id="@+id/group_vaidhika"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+
+                        <RadioButton
+                            android:id="@+id/radio_yes"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/lato_bold"
+                            android:scaleX="0.8"
+                            android:scaleY="0.8"
+                            android:text="@string/yes"
+                            android:textSize="14sp" />
+
+                        <RadioButton
+                            android:id="@+id/radio_no"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/lato_bold"
+                            android:scaleX="0.8"
+                            android:scaleY="0.8"
+                            android:text="@string/no"
+                            android:textSize="14sp" />
+
+                    </RadioGroup>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_register"
